--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="styleshet" href="css/style.css">
+        <link rel="stylesheet" href="css/style.css">
         <title>Postion Attribute</title>
     </head>
     <body>
